# irpf-report

./: README.md  pyproject.toml
src/irpf_report/: asset_types.py  assets.py  cli.py  holdings.py  inventory.py  investments.py  parsers.py  reports.py  utils.py
