[project]
name = "irpf-report"
version = "0.1.0"
description = "Brazilian IRPF Report Generator from the B3 holdings reports"
readme = "README.md"
authors = [
    { name = "Filipe Utzig", email = "filipe@gringolito.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[project.scripts]
irpf-report = "irpf_report.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3.250308",
]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]
